# esp32-h2-tester

./: CMakeLists.txt  platformio.ini  test.json
include/: cloud_fog_icon.hpp  cloud_icon.hpp  cloud_rain_icon.hpp  cloud_solid_icon.hpp  clouds_icon.hpp  clouds_sun_icon.hpp  display.h  display_config.h  http.h  http_stream.hpp  lightning_icon.hpp  moon_cloud_icon.hpp  moon_icon.hpp  question_icon.hpp  snowflake_icon.hpp  sun_icon.hpp  wifi_manager.hpp
main/: CMakeLists.txt  http_stream.cpp  idf_component.yml  main.cpp  wifi_manager.cpp
src/: display.c  main.bak  main.cpp  wifi_manager.cpp
